k8s/ingress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnn-conversao-distancia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dnn-conversao-distancia
  template:
    metadata:
      labels:
        app: dnn-conversao-distancia
    spec:
      containers:
      - name: dnn-conversao-distancia
        image: 393736331262.dkr.ecr.us-east-1.amazonaws.com/dnn-conversao-distancia:v1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "128m"
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: dnn-conversao-distancia
spec:
  type: NodePort
  selector:
    app: dnn-conversao-distancia
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnn-eks-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: dnn-eks-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dnn-conversao-distancia
            port:
              number: 80
